Added tiles to the board

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="js/main.js">
+  <script type="text/javascript" src="js/script.js">
 
   </script>
   <link rel="stylesheet" href="styles/styles.css">
-  <title>PacMan</title>
+  <title>Pac-Man</title>
 </head>
 <body>
   <div class="game-intro">
-    <img src="./images/Pac-man-logo.gif" alt="" class="logo-img">
+    <img id="logo" src="./images/Pac-man-logo.gif" alt="" class="logo-img">
     <br>
     <button id="start-button">StartGame</button>
-    <p>Use the left and right arrow to control the car!</p>
-    <img src="./images/pacman.gif" alt="" class="arrows-img">
   </div>
+  <br>
   <div id="game-board">
-    <canvas id="my-canvas" width="500" height="650"></canvas>
+    <!-- <div class="tile wall"></div>
+    <div class="tile coin"></div>
+    <div class="tile pacman"></div> -->
 
   </div>
 </body>
