Moves from left side of grid to the right

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <button id="start-button">StartGame</button>
   </div>
   <br>
+  <div></div>
   <div id="game-board">
     <!-- <div class="tile wall"></div>
     <div class="tile coin"></div>
     <div class="tile pacman"></div> -->
 
   </div>
+  <div></div>
   <br>
   <div>
     
