Added fonts and fixed movements for Pac-Man

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="js/script.js">
-
-  </script>
+  <script type="text/javascript" src="js/script.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
   <title>Pac-Man</title>
 </head>
 <body>
   <div class="game-intro">
     <img id="logo" src="./images/Pac-man-logo.gif" alt="" class="logo-img">
+    <img id="animated-logo" src="./images/animated-pacman.gif" alt="" class="logo-img">
     <br>
-    <button id="start-button">StartGame</button>
+    <button id="start-button">Start Game</button>
+    <div id="score">Score: 0</div>
   </div>
-  <br>
   <div></div>
   <div id="game-board">
     <!-- <div class="tile wall"></div>
