Added ghost movement

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/neon.css">
   <title>Pac-Man</title>
 </head>
 <body>
@@ -17,17 +18,8 @@
     <button id="start-button">Start Game</button>
     <div id="score">Score: 0</div>
   </div>
-  <div></div>
-  <div id="game-board">
-    <!-- <div class="tile wall"></div>
-    <div class="tile coin"></div>
-    <div class="tile pacman"></div> -->
-
-  </div>
-  <div></div>
+  <div id="game-board"></div>
+  <div id="game-over"></div>
   <br>
-  <div>
-    
-  </div>
 </body>
 </html>
